traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:21: error: value Norst is not a member of object plm.universe.Direction
   if(getDirection() == Direction.Norst){
                                  ^